# TRAB_SERIES_TEMP

./: .gitignore  AGENTS.md  README.md  config.yaml  m4_train_mlp.ipynb  main.ipynb  old.ipynb  pyproject.toml  requirements-kaggle.txt  requirements.txt  ruff.toml
data/: cotacao_dolar_2006_2026.csv  pib_2002_2024.csv  pib_2022_2024.csv  prod_agricola_2002_2024.csv  prod_industrial_2002_2024.csv
docs/: m4.md  nasa.md
src/config/: config.py
src/data/: datamodule.py  dataset.py  torch_dataset.py  utils.py
src/models/: baseline.py  baselines.py  outlier.py  vae.py
src/models/nn/: __init__.py  base_model.py  tcn.py  vae.py
src/pipelines/: metrics.py  optimization.py
