[project]
name = "trab-series-temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # "fastparquet>=2026.5.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "kagglehub>=1.0.1",
    "lightning>=2.6.5",
    "logging>=0.4.9.6",
    "mlflow>=1.27.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pandera>=0.31.1",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.6.0",
]

[tool.uv.sources]
# Instala versao com CUDA apenas em ambientes Linux (pensando no Kaggle)
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

# index CPU
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# INDEX GPU
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
