[project]
name = "trab-series-temp"
version = "0.1.0"
description = "Projeto de Detecção de Anomalias em Séries Temporais usando Deep Learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "darts>=0.44.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "kagglehub>=1.0.1",    #baixar dataset
    "lightning>=2.6.5",
    "logging>=0.4.9.6",
    "mlflow>=1.27.0",
    "nbformat>=5.10.4",
    "numpy<=2.4.*",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.6.0",
]

[dependency-groups]
dev = ["taskipy>=1.12.0", "pytest>=8.0.0", "ruff>=0.3.0"]
kaggle = [
    "darts>=0.44.1",
    "statsmodels>=0.14.6",
    "pyyaml>=6.0.3",
    "lightning>=2.6.5",
    "logging>=0.4.9.6",
    "mlflow>=1.27.0",
]

[tool.taskipy.tasks]
# rodar com uv run task nome_da_task
lint = "ruff format . && ruff check ."
test = "pytest -v"
all = "task lint && task test"

[tool.uv.sources]
# Instala versao com CUDA apenas em ambientes Linux (pensando no Kaggle)
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

# index CPU
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# INDEX GPU
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
